alguns ajustes e refatoração

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,9 +1,11 @@
 .home_container {
-  padding: 20px 100px 10px 100px;
+  padding: 60px 100px 0px 100px;
 }
 
 .cardmovie_container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 20px;
+  gap: 30px;
+  align-items: center;
+  margin-bottom: 100px;
 }
